--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "fire>=0.7.0",
     "huggingface-hub>=0.31.4",
+    "jinja2>=3.1.6",
     "json-repair>=0.44.1",
-    "matplotlib>=3.10.3",
+    "matplotlib<3.10",
     "numpy>=2.2.6",
     "ollama>=0.4.8",
     "openai>=1.79.0",
