Update requirements.txt to have vllm

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ huggingface_hub  # downloading datasets
 openai
 together
 ollama
+vllm
 # for smol tokenisation, we could consider to remove it
 transformers
 
