--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,9 @@ huggingface_hub  # downloading datasets
 openai
 together
 ollama
+vllm
 # for smol tokenisation, we could consider to remove it
 transformers
-
+# for pandalm
+accelerate
 tiktoken
